# screen-capture

./: .gitignore  CMakeLists.minimal.txt  CMakeLists.test.txt  CMakeLists.txt  DEPLOYMENT.md  GENERATION_COMPLETE.md  HOW_TO_VIEW_STREAM.md  IMPLEMENTATION_GUIDE.md  NETWORK_SETUP.md  README.md  RELEASE_README.txt  VISUAL_VIEWER_GUIDE.md  build-linux.sh  build-windows.bat  generate_impl.ps1  test_enum.cpp
build_test/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ScreenShareMinimalTest.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  test_common.vcxproj  test_common.vcxproj.filters  test_logger.vcxproj  test_logger.vcxproj.filters  test_threadpool.vcxproj  test_threadpool.vcxproj.filters
build_test/test_common.dir/Debug/: test_common.exe.recipe  test_common.ilk
build_test/test_common.dir/Debug/test_common.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  test_common.lastbuildstate
build_test/test_logger.dir/Debug/: test_logger.exe.recipe  test_logger.ilk
build_test/test_logger.dir/Debug/test_logger.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_test/test_threadpool.dir/Debug/: test_threadpool.exe.recipe  test_threadpool.ilk
build_test/test_threadpool.dir/Debug/test_threadpool.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_test/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
build_test/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog
build_test/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
build_test/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
cmake/: FindSDL2.cmake
include/: common.h
src/: main.cpp
src/audio/: AudioStream.h  MicrophoneCapture.cpp  MicrophoneCapture.h
src/capture/: ScreenCapture.cpp  ScreenCapture.h
src/core/: Application.cpp  Application.h  Config.h
src/display/: DisplayManager.h  SDLRenderer.cpp  SDLRenderer.h
src/network/: StreamClient.cpp  StreamClient.h  StreamServer.cpp  StreamServer.h  TLSConnection.cpp  TLSConnection.h
src/threading/: SafeQueue.h  ThreadPool.cpp  ThreadPool.h
src/utils/: Logger.cpp  Logger.h
tests/: test_audio.cpp  test_common.cpp  test_e2e_streaming.cpp  test_logger_minimal.cpp  test_microphone.cpp  test_network.cpp  test_screen_capture.cpp  test_stream_app.cpp  test_stream_server.cpp  test_threading.cpp  test_tls.cpp  test_viewer.cpp  test_visual_viewer.cpp
